Undo / Redo したときに移動したノードに注目する機能を追加した